--- a/Card/index.html
+++ b/Card/index.html
@@ -54,17 +54,17 @@
             fill="#271b13"
             points="689,-131 689,14 785,131 905,130" />
 
-          <polygon
+          <!-- <polygon
             id="tred3"
             class="step3"
             fill="#f9bb4b"
-            points="503,14 806,385 996,385 689,14" />
-          <polygon
+            points="503,14 806,385 996,385 689,14" /> -->
+          <!-- <polygon
             class="step3"
             fill="#271b13"
-            points="503,14 503,159 686,386 806,385" />
+            points="503,14 503,159 686,386 806,385" /> -->
 
-          <polygon
+          <!-- <polygon
             id="tred2"
             class="step2"
             fill="#f9bb4b"
@@ -82,7 +82,7 @@
           <polygon
             class="step1"
             fill="#271b13"
-            points="130,304 130,449 226,567 346,565" />
+            points="130,304 130,449 226,567 346,565" /> -->
         </g>
 
         <clipPath id="txtBoxes">
@@ -99,7 +99,7 @@
           width="125"
           href="https://assets.codepen.io/721952/scratches2.png" />
 
-        <g id="steps">
+        <!-- <g id="steps">
           <polygon
             class="step4"
             id="tred4"
@@ -139,7 +139,7 @@
             class="step1"
             fill="#271b13"
             points="130,304 130,449 226,567 346,565" />
-        </g>
+        </g> -->
 
         <path
           mask="url(#curlMask)"
@@ -162,13 +162,13 @@
             ry="23" />
         </g>
 
-        <g id="orb">
-          <circle fill="#f9503e" cx="423" cy="46" r="51" />
+        <!-- <g id="orb">
+          <circle fill="#FF622D" cx="423" cy="46" r="51" />
           <path
             id="star"
             fill="#fff"
             d="M452.3,5.1c3-3,6.1-9.1,6.1-9.1s0.8,3.8,4.5,7.6c6.1,6.1,9.1,6.1,9.1,6.1s-3,1.5-7.6,6.1s-6.1,9.1-6.1,9.1 s-2.3-5.3-6.1-9.1s-8.3-5.3-8.3-5.3S449.3,8.1,452.3,5.1z" />
-        </g>
+        </g> -->
 
         <path
           id="coil"
@@ -198,9 +198,9 @@
 
         <g fill="#fff" stroke-linecap="round">
           <g clip-path="url(#txtBoxes)">
-            <text x="45" y="60" font-size="26">Hana</text>
-            <text x="45" y="320" font-size="21">Seo hana</text>
-            <text x="470" y="320" font-size="26">05/29</text>
+            <text x="45" y="60" font-size="26">CARD</text>
+            <text x="45" y="320" font-size="21">SEO HANA</text>
+            <text x="470" y="320" font-size="26">06/10</text>
           </g>
           <path
             fill="none"
